--- a/SteganoServiveProject/SteganoServiveProject.csproj
+++ b/SteganoServiveProject/SteganoServiveProject.csproj
@@ -233,6 +233,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="Test.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
