--- a/SteganoServiveProject/SteganoServiveProject.csproj
+++ b/SteganoServiveProject/SteganoServiveProject.csproj
@@ -221,6 +221,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\MulipartFormData.cs" />
     <Compile Include="Controllers\CryptUtilityController.cs" />
     <Compile Include="Controllers\TodoItemController.cs" />
     <Compile Include="DataObjects\TodoItem.cs" />
